--- a/app.json
+++ b/app.json
@@ -1,6 +1,9 @@
 {
      "pages": [
+          "pages/wxs/wxs",
           "pages/home/home",
+          "pages/wxml/wxml",
+          "pages/wxss/wxss",
           "pages/about/about"
           
      ]
